# wgpu-video

./: .gitmodules  Cargo.toml  README.md  flake.nix
docs/: API_DESIGN.md  ARCHITECTURE.md  CODEBASE_STRUCTURE.md  DEVELOPMENT_GUIDE.md  INTEGRATION_GUIDE.md  PLATFORM_BACKENDS.md  cros-codecs-api-guide.md  libva-rust-api-in-depth.md  libva-zero-copy-guide.md
examples/: demuxer_demo.rs  iced_player.rs  linux_h264_vaapi.rs  linux_h264_vaapi_wgpu.rs  player_60fps.rs  vk_video.rs
src/: backend.rs  demuxer.rs  lib.rs  player.rs
src/backend/: libva.rs  libva_wgpu.rs  mod.rs
src/backend/libva/: annexb.rs  decode.rs  decoder.rs  events.rs  export.rs  mod.rs
src/backend/libva_wgpu/: importer.rs  mod.rs  vulkan.rs
src/demuxer/: codec_config.rs  ffmpeg.rs  matroska.rs  mod.rs  mp4.rs  types.rs
src/player/linux/: decode.rs  mod.rs  renderer.rs
