[package]
name = "wgpu-video"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.4.0"
symphonia = {version = "0.5.5", features = ["all-formats"]}
wgpu = "28.0.0"
winit = "0.30.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.62.2"

[target.'cfg(target_os = "linux")'.dependencies]
libva = { package = "cros-libva", path = "third_party/cros-libva/lib" }
