[package]
name = "wgpu-video"
version = "0.1.0"
edition = "2024"

[features]
default = []
libavformat = ["dep:ffmpeg-the-third"]

[dependencies]
anyhow = "1.0.102"
ffmpeg-the-third = { version = "4.1.0", default-features = false, features = ["format"], optional = true }
matroska-demuxer = "0.7.0"
mp4 = "0.14.0"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.12"
iced = { git = "https://github.com/iced-rs/iced.git", features = [
  "wgpu",
  "tokio",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.62.2"

[target.'cfg(target_os = "linux")'.dependencies]
libva = { package = "cros-libva", path = "third_party/cros-libva/lib" }
codecs = { package = "cros-codecs", path = "third_party/cros-codecs", features = [
  "vaapi",
] }
ash = "0.38.0"
crossbeam-channel = "0.5.15"
libloading = "0.8.9"
